src/objects/CPO_Enrichment_Line_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>POI_Field_Api__c</fullName>
        <label>POI Field Api</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_API__c</fullName>
        <label>Token API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CPO Enrichment Line Field Mapping</label>
    <pluralLabel>CPO_Enrichment_Line_Field_Mappings</pluralLabel>
</CustomObject>